--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -3,7 +3,7 @@ name: Simple Pipeline
 on:
   workflow_dispatch:
   push: 
-    branches: [feature/init]
+    branches: [master]
   pull_request:
     branches: [master]
 
