--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
   terraform:
+    defaults:
+      run:
+        working-directory: ./terraform
     name: 'Terraform'
     runs-on: ubuntu-latest
     steps:    
