--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -31,18 +31,18 @@ jobs:
         uses: hashicorp/setup-terraform@v1
       - name: CI Terraform Format
         id: fmt
-        working-directory: ./terraform
+        working-directory: terraform
         run: terraform fmt -check
       - name: Terraform Init
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
-        working-directory: ./terraform
+        working-directory: terraform
         id: init
         run: terraform init
       - name: Terraform Plan
         id: plan
-        working-directory: ./terraform
+        working-directory: terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
@@ -78,6 +78,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
-        working-directory: ./terraform
+        working-directory: terraform
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         run: terraform apply -auto-approve
