--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,6 +27,9 @@ jobs:
         with:
           push: true
           tags: alexpotapov87/simple:latest
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
