--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,11 +1,13 @@
 name: Simple Pipeline
 
 on:
-  workflow_dispatch:
   push: 
-    branches: [master]
+    branches:
+      - 'master'
   pull_request:
-    branches: [master]
+    branches: 
+      - 'master'
+  workflow_dispatch:
 
 
 jobs:
@@ -29,7 +31,7 @@ jobs:
           tags: alexpotapov87/simple:latest
       - name: Checkout repo
         uses: actions/checkout@v2
-        
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
